# snf-schedule-optimizer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  compose.demo.yml  compose.dev.yml  justfile  pyproject.toml
snf-schedule-optimizer-service/: .dockerfile  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  architecture.md  docker-compose-demo.yml  docker-compose.yml  justfile  pyproject.toml
snf-schedule-optimizer-service/docs/adr/: 0001-unit-of-work-and-transaction-boundaries.md
snf-schedule-optimizer-service/snf_schedule_optimizer_tests/: builders.py  business_story_tests.py  fakes.py  scenario_builder.py  scenario_models.py  test1.py  test_anti_corruption.py  test_api_main_app.py  test_builder.py  test_business_stories.py  test_circuit_breaker.py  test_composition.py  test_event_bus.py  test_optimization_logic.py  test_read_repo.py  test_refactor_contracts.py  test_run_submission.py  test_run_worker.py  test_scalability.py  test_serialization.py  test_specifications.py  test_tenant.py  test_unit_of_work.py  test_value_objects.py
snf-schedule-optimizer-service/snf_schedule_optimizer_tests/api/: test_get_optimization_run.py  test_handler_error_handling.py  test_run_submission.py
snf-schedule-optimizer-service/snf_schedule_optimizer_tests/costs/: test_agency_ot.py  test_compensation_dates.py  test_overtime_models.py  test_shift_differentials.py  test_shift_pay_processor.py
snf-schedule-optimizer-service/snf_schedule_optimizer_tests/domain/: test_candidate_eligibility.py  test_circadian_rest.py  test_float_limits.py  test_ft_pt_prn.py  test_history_boundary_constraints.py  test_locked_assignment_constraints.py  test_pdpm_staffing.py  test_preceptor_ratio.py  test_preference_penalty.py  test_pto_callout.py  test_review_fixes.py  test_rn_mandates.py  test_run_contracts.py  test_unit_minimums.py  test_weekend_fairness.py
snf-schedule-optimizer-service/snf_schedule_optimizer_tests/integration/: test_optimize_run_end_to_end.py
snf-schedule-optimizer-service/snf_schedule_optimizer_tests/optimizer/: test_constraint_history.py  test_demand_model.py  test_provider_isolation.py  test_rule_wiring.py  test_solver_adapter_contract.py
snf-schedule-optimizer-service/snf_schedule_optimizer_tests/persistence/: test_staff_compensation_model.py
snf-schedule-optimizer-service/snf_schedule_optimizer_tests/reporting/: test_biweekly_ot.py  test_gap_detection.py  test_pbj_export.py
snf-schedule-optimizer-service/snf_schedule_optimizer_tests/service/: test_commands.py  test_queries.py
snf-schedule-optimizer-service/snf_schedule_optimizer_tests/snapshots/: test_snapshot_builder.py  test_snapshot_includes_history_and_locks.py
snf-schedule-optimizer-service/snf_schedule_optimizer_tests/support/: __init__.py  builders.py  factories.py
snf-schedule-optimizer-service/src/api/: dtos.py
snf-schedule-optimizer-service/src/snf_schedule_optimizer/: baseline_schedule_generator.py  datetime_utils.py  ml_output_repo.py  ml_output_retrievers.py  nurse_shift_hours_tracking.py  optimization_engine.py  optimization_engine_v2.py  resident_acuity_repo.py  resident_acuity_retrievers.py  schedule_cost_evaluator.py
snf-schedule-optimizer-service/src/snf_schedule_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
snf-schedule-optimizer-service/src/snf_schedule_optimizer/api/: __init__.py  dtos.py  health.py  main.py  worker_main.py
snf-schedule-optimizer-service/src/snf_schedule_optimizer/domain/: __init__.py  aggregate.py  events.py  exceptions.py  repositories.py  specifications.py  value_objects.py
snf-schedule-optimizer-service/src/snf_schedule_optimizer/infrastructure/: circuit_breaker.py  composition.py  connect_rpc_verbose_logger.py  demo_bootstrap.py  demo_composition.py  demo_seeder.py  event_bus.py  logging.py  scenario_builder.py  sqid_converter.py  tracing.py
snf-schedule-optimizer-service/src/snf_schedule_optimizer/models/: __init__.py  constraints.py  data.py  main_data_models.py  persistence_dtos.py  scenario_models.py  test_parameters_data_models.py  testing.py
snf-schedule-optimizer-service/src/snf_schedule_optimizer/optimizer/: calculators.py  clocks.py  context.py  diagnostics.py  engine.py  interfaces.py  lp_helpers.py  models.py  optimization_engine_old.py  providers.py  reporting.py  schedule_extraction.py  snapshot_provider.py
snf-schedule-optimizer-service/src/snf_schedule_optimizer/persistence/: __init__.py  certification_repo.py  certification_retrieval.py  certification_service.py  employee_repo.py  employee_retriever.py  employee_retriever_impl.py  employee_rule_repo.py  employee_rule_retriever.py  facility_repo.py  facility_retriever.py  facility_rules_repo.py  facility_rules_retriever.py  facility_rules_service.py  fakes.py  history_repo.py  history_retriever.py  idempotency_repo.py  nurse_repo.py  nurse_retrievers.py  overtime_retrievers.py  resident_acuity_per_shift_repo.py  resident_acuity_per_shift_retriever.py  rule_repo.py  rule_retrieval.py  schedule_mappers.py  schedule_repo.py  schedule_retriever.py  shift_repo.py  shift_requirements_repo.py  shift_requirements_retriever.py  shift_retriever.py  staff_compensation_repo.py  staff_compensation_retriever.py  staff_compensation_service.py  tenant.py  unit_of_work.py
snf-schedule-optimizer-service/src/snf_schedule_optimizer/reporting/: gap_detection.py  pbj_export.py
snf-schedule-optimizer-service/src/snf_schedule_optimizer/robustness_tests/: __init__.py  scenario_generator.py  simulation_runner.py  test_harness.py  test_running.py
snf-schedule-optimizer-service/src/snf_schedule_optimizer/scenario/: __init__.py  candidate_eligibility.py  index.py  state_builder.py
snf-schedule-optimizer-service/src/snf_schedule_optimizer/service/: __init__.py
snf-schedule-optimizer-service/src/snf_schedule_optimizer/services/: interfaces.py  repositories.py
snf-schedule-optimizer-service/src/snf_schedule_optimizer/solver/: __init__.py  adapter.py
snf-schedule-optimizer-service/src/snf_schedule_optimizer/sqlalchemy_models/: base.py  employee.py  (+22 more)
(+303 files in other folders)
