[project]
name = "snf-schedule-optimizer"
version = "0.1.0"
description = "BE schedule optimizer for skilled nursing facilities, optimizing on various factors including cost, quality, and patient outcomes."
authors = [
    { name = "Nechemia R", email = "nrenzoni1@gmial.com" },
]
requires-python = ">=3.13"

dependencies = [
    "asyncpg>=0.30.0",
    "numpy>=2.3.4",
    "pendulum>=3.1.0",
    "polars>=1.35.2",
    "pulp>=3.3.0",
    "sqlalchemy[mypy]>=2.0.44",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
]

[tool.mypy]
# The paths MyPy should check. Use a list of your package/source directories.
files = ["snf_schedule_optimizer/", "snf_schedule_optimizer_tests/"]
# Alternatively, you can use the packages option:
# packages = ["your_package_name"]

# === Recommended Strictness Flags ===
strict = true            # Enables many strict checks (good for new projects)
# If strict is too much, enable these one by one:
# disallow_untyped_defs = true
# no_implicit_optional = true
# warn_return_any = true
# disallow_any_unimported = true
# disallow_untyped_calls = true

plugins = [
    "sqlalchemy.ext.mypy.plugin"
]

# === Common Configuration Settings ===
# If you don't have type stubs for all dependencies, you might need this *temporarily*.
# Best practice is to install stubs (see step 1) and keep this as 'false' or omit it.
ignore_missing_imports = false

# Allows MyPy to find stubs for packages that are installed in your venv
python_executable = ".venv/Scripts/python.exe"

[[tool.mypy.overrides]]
module = "pulp"
ignore_missing_imports = true
