[project]
name = "snf-schedule-optimizer"
version = "0.1.0"
description = "BE schedule optimizer for skilled nursing facilities, optimizing on various factors including cost, quality, and patient outcomes."
authors = [
    { name = "Nechemia R", email = "nrenzoni1@gmial.com" },
]
requires-python = "==3.13.*"

dependencies = [
    "asyncpg>=0.30.0",
    "connect-python>=0.5.0",
    "dependency-injector>=4.48.2",
    "grpcio>=1.76.0",
    "hexaly>=14.0.20251112",
    "numpy>=2.3.4",
    "pendulum>=3.1.0",
    "polars>=1.35.2",
    "protobuf>=6.33.1",
    "pulp>=3.3.0",
    "sqlalchemy[mypy]>=2.0.44",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pip>=25.3",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]

[tool.mypy]
# The paths MyPy should check. Use a list of your package/source directories.
files = ["src/snf_schedule_optimizer/", "snf_schedule_optimizer_tests/"]
# Alternatively, you can use the packages option:
# packages = ["your_package_name"]

# === Recommended Strictness Flags ===
strict = true            # Enables many strict checks (good for new projects)
# If strict is too much, enable these one by one:
# disallow_untyped_defs = true
# no_implicit_optional = true
# warn_return_any = true
# disallow_any_unimported = true
# disallow_untyped_calls = true

plugins = [
    "sqlalchemy.ext.mypy.plugin"
]

# === Common Configuration Settings ===
# If you don't have type stubs for all dependencies, you might need this *temporarily*.
# Best practice is to install stubs (see step 1) and keep this as 'false' or omit it.
ignore_missing_imports = false

# Allows MyPy to find stubs for packages that are installed in your venv
python_executable = ".venv/Scripts/python.exe"

[[tool.uv.index]]
name = "hexaly"
url = "https://pip.hexaly.com/"

[[tool.mypy.overrides]]
module = "pulp"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "snf_schedule_optimizer.generated.*"
ignore_errors = true


[tool.ruff]
# Ruff respects .gitignore by default
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
# Set the line length, similar to Black's default
line-length = 88
# Target Python version for backwards-compatibility checks
target-version = "py313"

[tool.ruff.lint]
# Enable the default rule set (Pyflakes F and some Pycodestyle E rules)
# You can extend this with other rule sets
select = ["E", "F"]
# Example: Extend with additional checks for Python errors and common gotchas (B, I, UP, etc.)
extend-select = ["B", "I", "UP", "C4", "SIM"]
# Ignore specific rules project-wide (optional)
ignore = [
    "E501",
    "SIM102",
    "B010",  # mypy doesn't like assignment to functions in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv.sources]
hexaly = { index = "hexaly" }
